--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
 
 	<title>nikkdev</title>
 
+	<link rel="icon" type="image/png" href="/favicon.png" />
+
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=cyrillic" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108364831-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-108364831-1');
+	</script>
 
 </head>
 <body>
@@ -125,7 +137,7 @@
 		<div class="footer"></div>
 	</div>
 
-	<!-- <script src="js/libs.min.js"></script>
-	<script src="js/script.js"></script> -->
+	<!-- <script src="js/libs.min.js"></script> -->
+	<!-- <script src="js/script.js"></script> -->
 </body>
 </html>
