--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>nikkdev</title>
+	<title>Nikolai Koshkarov - frontend webdev</title>
 
 	<link rel="icon" type="image/png" href="/favicon.png" />
 
@@ -33,8 +33,23 @@
 				<div class="bgr bgr1"></div>
 			</div>
 			<div class="inner">
-				<div class="photo">
+				<div class="avatar">
 					<img src="img/avatar1.jpg" alt="avatar" width="294" height="294">
+					<div class="orbs">
+						<div class="orb1">
+							<div class="sat s-html"></div>
+							<div class="sat s-css"></div>
+							<div class="sat s-js"></div>
+						</div>
+						<div class="orb2">
+							<div class="sat s-less"></div>
+							<div class="sat s-jq"></div>
+							<div class="sat s-ps"></div>
+							<div class="sat s-gulp"></div>
+							<div class="sat s-git"></div>
+							<div class="sat s-vue"></div>
+						</div>
+					</div>
 				</div>
 				<div class="name">NIKOLAI<br>KOSHKAROV</div>
 				<div class="occupation">front-end web developer</div>
@@ -133,8 +148,6 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="footer"></div>
 	</div>
 
 	<!-- <script src="js/libs.min.js"></script> -->
