--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="work traktrain prg">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="prg-text"><span>in progress</span></div>
+							<div class="prg-text"><span>project in progress</span></div>
 						</div>
 					</div>
 
