portfolio meet kz add

--- a/index.html
+++ b/index.html
@@ -67,73 +67,79 @@
 			<div class="inner">
 				<div class="hello">Hello, buddy!<br>Let me show you some of my works below..<br>worth a thousand words.</div>
 				<div class="myworks">
-					<div class="work traktrain prg">
+					<div class="work meetkz">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="prg-text"><span>project in progress</span></div>
+							<div class="prg-text"><span></span></div>
+						</div>
+					</div>
+					<div class="work traktrain">
+						<div class="image"></div>
+						<div class="inner">
+							<div class="prg-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work mayak">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work polimer">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work sad">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work smm4me">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work implantology">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work tourazura">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work lovit">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work counter">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 
 					<div class="work lealta">
 						<div class="image"></div>
 						<div class="inner">
-							<div class="sample-text"><span>кликабельность элементов портфолио в разработке</span></div>
+							<div class="sample-text"><span></span></div>
 						</div>
 					</div>
 				</div>
