--- a/index.html
+++ b/index.html
@@ -1,162 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>Nikolai Koshkarov - frontend webdev</title>
-
-	<link rel="icon" type="image/png" href="/favicon.png" />
-
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=cyrillic" rel="stylesheet">
-
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108364831-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-108364831-1');
-	</script>
-
-</head>
-<body>
-
-	<div id="app">
-		<div class="scr scr_1">
-			<div class="background">
-				<div class="bgr bgr1"></div>
-			</div>
-			<div class="inner">
-				<div class="avatar">
-					<img src="img/avatar1.jpg" alt="avatar" width="294" height="294">
-					<div class="orbs">
-						<div class="orb1">
-							<div class="sat s-html"></div>
-							<div class="sat s-css"></div>
-							<div class="sat s-js"></div>
-						</div>
-						<div class="orb2">
-							<div class="sat s-less"></div>
-							<div class="sat s-jq"></div>
-							<div class="sat s-ps"></div>
-							<div class="sat s-gulp"></div>
-							<div class="sat s-git"></div>
-							<div class="sat s-vue"></div>
-						</div>
-					</div>
-				</div>
-				<div class="name">NIKOLAI<br>KOSHKAROV</div>
-				<div class="occupation">front-end web developer</div>
-				<div class="contacts clearfix">
-					<div class="txt">any qustions please contact</div>
-					<div class="way">
-						<div class="mobile">mobile: <a href="tel:+79192330719">+7(919) 233-07-19</a></div>
-						<div class="e-mail">email: <a href="mailto:koshkarovnik@gmail.com">koshkarovnik@gmail.com</a></div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="scr scr_2">
-			<div class="inner">
-				<div class="hello">Hello, buddy!<br>Let me show you some of my works below..<br>worth a thousand words.</div>
-				<div class="myworks">
-					<div class="work meetkz">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="prg-text"><span></span></div>
-						</div>
-					</div>
-					<div class="work traktrain">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="prg-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work mayak">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work polimer">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work sad">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work smm4me">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work implantology">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work tourazura">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work lovit">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work counter">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-
-					<div class="work lealta">
-						<div class="image"></div>
-						<div class="inner">
-							<div class="sample-text"><span></span></div>
-						</div>
-					</div>
-				</div>
-				<div class="footer">
-					<div class="contacts clearfix">
-						<div class="txt">For co-works, projects<br> or job offers contact</div>
-						<div class="way">
-							<div class="mobile">mobile: <a href="tel:+79192330719">+7(919) 233-07-19</a></div>
-							<div class="e-mail">email: <a href="mailto:koshkarovnik@gmail.com">koshkarovnik@gmail.com</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- <script src="js/libs.min.js"></script> -->
-	<!-- <script src="js/script.js"></script> -->
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><link href="/static/css/main.5f361e03.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,p,l=r[0],a=r[1],f=r[2],c=0,s=[];c<l.length;c++)p=l[c],Object.prototype.hasOwnProperty.call(o,p)&&o[p]&&s.push(o[p][0]),o[p]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var a=t[l];0!==o[a]&&(n=!1)}n&&(u.splice(r--,1),e=p(p.s=t[0]))}return e}var n={},o={1:0},u=[];function p(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,p),t.l=!0,t.exports}p.m=e,p.c=n,p.d=function(e,r,t){p.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},p.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},p.t=function(e,r){if(1&r&&(e=p(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(p.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)p.d(t,n,function(r){return e[r]}.bind(null,n));return t},p.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return p.d(r,"a",r),r},p.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},p.p="/";var l=this.webpackJsonpapp=this.webpackJsonpapp||[],a=l.push.bind(l);l.push=r,l=l.slice();for(var f=0;f<l.length;f++)r(l[f]);var i=a;t()}([])</script><script src="/static/js/2.6cb6d0fe.chunk.js"></script><script src="/static/js/main.dd0be94c.chunk.js"></script></body></html>
